objects/SubBrand__c.object
<CustomObject>
    <description>Sub Brands</description>
    <fields>
        <fullName>Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>tffa__Brand__c</referenceTo>
        <relationshipLabel>SubBrands</relationshipLabel>
        <relationshipName>SubBrand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>External Id</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ShowInEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show In Email</description>
        <label>ShowInEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <description>Sort Order</description>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SubBrand</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SubBrand</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SubBrands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>